--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+.light {
+    --scrollbar-track: #d1dae5;
+    --scrollbar-thumb: #acb1b6;
+}
+
+.dark {
+    --scrollbar-track: #131219;
+    --scrollbar-thumb: #3f3e4b;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,3 +20,21 @@ body {
     background: rgb(17,24,39);
 }
 
+* {
+    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+    scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--scrollbar-track);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb);
+    border-radius: 20px;
+    border: 3px solid var(--scrollbar-track);
+}
